--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script>
         async function fetchUUID() {
             try {
-                const response = await fetch('http://localhost:3000/get-uuid');
+                const response = await fetch('https://backd-production.up.railway.app/get-uuid');
                 const data = await response.json();
                 if (data.uuid) {
                     document.getElementById('uuidDisplay').innerText = `System UUID: ${data.uuid}`;
